=====================

Release 0.8.2: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings
  TEZ-2948. Stop using dagName in the dagComplete notification to TaskCommunicators.
  TEZ-2949. Allow duplicate dag names within session for Tez.
  TEZ-604. Revert temporary changes made in TEZ-603 to kill the provided tez session, if running a MapReduce job.

ALL CHANGES:
  TEZ-2910. Set caller context for tracing ( integrate with HDFS-9184 ).
  TEZ-2976. Recovery fails when InputDescriptor is changed during input initialization.
  TEZ-2997. Tez UI: Support searches by CallerContext ID for DAGs
  TEZ-2996. TestAnalyzer fails in trunk after recovery redesign
  TEZ-2987. TestVertexImpl.testTez2684 fails
  TEZ-2995. Timeline primary filter should only be on callerId and not type.
  TEZ-2994. LocalProgress in tez-runtime-library missing Apache header, rat check warnings from the new licenses after TEZ-2592 merge.
  TEZ-2977. Make HadoopShim selection be overridable for distro-specific implementations.
  TEZ-2472. Change slf4j version to 1.7.10.
  TEZ-2920. org.apache.tez.client.TestTezClient.testStopRetriesUntilTimeout is flaky.
  TEZ-2824. Add javadocs for Vertex.setConf and DAG.setConf.
  TEZ-2911. Null location Strings can cause problems with GroupedSplit serialization.
  TEZ-2990. Change test-patch.sh to run through all tests, despite failures in upstream modules
  TEZ-2798. NPE when executing TestMemoryWithEvents::testMemoryScatterGather.
  TEZ-2963. RecoveryService#handleSummaryEvent exception with HDFS transparent encryption + kerberos authentication.
  TEZ-2966. Tez does not honor mapreduce.task.timeout
  TEZ-2979. FlakyTest: org.apache.tez.history.TestHistoryParser.
  TEZ-1491. Tez reducer-side merge's counter update is slow.
  TEZ-2943. Change shuffle vertex manager to use per vertex data for auto
  reduce and slow start
  TEZ-2346. TEZ-UI: Lazy load other info / counter data
  TEZ-2975. Bump up apache commons dependency.