@@ -10,6 +10,7 @@ INCOMPATIBLE CHANGES
   TEZ-604. Revert temporary changes made in TEZ-603 to kill the provided tez session, if running a MapReduce job.
 
 ALL CHANGES:
+  TEZ-3017. HistoryACLManager does not have a close method for cleanup
   TEZ-2910. Set caller context for tracing ( integrate with HDFS-9184 ).
   TEZ-2976. Recovery fails when InputDescriptor is changed during input initialization.
   TEZ-2997. Tez UI: Support searches by CallerContext ID for DAGs
